--- a/HibernateOneToOneMapping/pom.xml
+++ b/HibernateOneToOneMapping/pom.xml
@@ -10,5 +10,12 @@
   		<artifactId>hibernate-core</artifactId>
   		<version>6.3.1.Final</version>
   	</dependency>
+  	
+  	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>8.0.30</version>
+     </dependency>
+     
   </dependencies>
 </project>
